Install core dependencies - IDE Helper, Debugbar and Former

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "barryvdh/laravel-ide-helper": "^2.1",
+        "barryvdh/laravel-debugbar": "^2.0",
+        "anahkiasen/former": "4.0.*@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -30,6 +33,7 @@
     "scripts": {
         "post-install-cmd": [
             "php artisan clear-compiled",
+            "php artisan ide-helper:generate",
             "php artisan optimize"
         ],
         "pre-update-cmd": [
