--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         "laravel/framework": "5.2.*",
         "barryvdh/laravel-ide-helper": "^2.1",
         "barryvdh/laravel-debugbar": "^2.0",
-        "anahkiasen/former": "4.0.*@dev",
-        "filp/whoops": "^1.1"
+        "anahkiasen/former": "4.0.1",
+        "filp/whoops": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
